# analysis-framework-base

./: .flake8  .gitignore  .gitleaks.toml  CHANGELOG.md  README.md  publish_pypi.sh  pyproject.toml
src/analysis_framework_base/: __init__.py  constants.py  exceptions.py  interfaces.py  models.py
tests/: test_constants.py  test_exceptions.py  test_interfaces.py  test_models.py
